Add production date, expiration date and expiration reminder to stock settings Show a forbidden sign when medicine has expired

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -276,4 +276,14 @@
     <string name="interval_start_condition">حالة بدء الفاصل الزمني</string>
     <string name="tag_filter_active">مرشح العلامات نشط. سيتم تصدير البيانات التي تحتوي على علامات مطابقة فقط.</string>
     <string name="show_taken_time_in_overview">عرض الوقت المستغرق في النظرة العامة</string>
-<string name="refill">إعادة تعبئة المخزون</string></resources>
+    <string name="refill">إعادة تعبئة المخزون</string>
+    <string name="fourteen_days_before">أربعة عشر يومًا قبل</string>
+    <string name="seven_days_before">سبعة أيام قبل</string>
+    <string name="three_days_before">ثلاثة أيام قبل</string>
+    <string name="one_day_before">يوم واحد قبل</string>
+    <string name="on_expiration">عند انتهاء الصلاحية</string>
+    <string name="expiration_settings">إعدادات انتهاء الصلاحية</string>
+    <string name="production_date">تاريخ الإنتاج</string>
+    <string name="expiration_date">تاريخ انتهاء الصلاحية</string>
+    <string name="expiration_reminder">تذكير بانتهاء الصلاحية</string>
+</resources>
