--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -254,5 +254,16 @@
     <string name="ignore_battery_optimization">Ohita akun optimointi</string>
     <string name="reschedule_reminder">Ajoita muistutus uudelleen</string>
     <string name="interval_start_condition">Intervallin käynnistysehto</string>
-<string name="tag_filter_active">Tunnisteiden suodatin aktiivinen. Vain tunnisteiden kanssa vastaavat tiedot viedään.</string>
-<string name="show_taken_time_in_overview">Näytä kuluva aika yleiskatsauksessa</string><string name="refill">Varastotäydennys</string></resources>
+    <string name="tag_filter_active">Tunnisteiden suodatin aktiivinen. Vain tunnisteiden kanssa vastaavat tiedot viedään.</string>
+    <string name="show_taken_time_in_overview">Näytä kuluva aika yleiskatsauksessa</string>
+    <string name="refill">Varastotäydennys</string>
+    <string name="fourteen_days_before">neljätoista päivää ennen</string>
+    <string name="seven_days_before">seitsemän päivää ennen</string>
+    <string name="three_days_before">kolme päivää ennen</string>
+    <string name="one_day_before">yksi päivä ennen</string>
+    <string name="on_expiration">vanhentuessa</string>
+    <string name="expiration_settings">Vanhentumisasetukset</string>
+    <string name="production_date">Valmistuspäivä</string>
+    <string name="expiration_date">Vanhentumispäivä</string>
+    <string name="expiration_reminder">Vanhentumismuistutus</string>
+</resources>
