--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -254,5 +254,16 @@
     <string name="ignore_battery_optimization">Batterijoptimalisatie negeren</string>
     <string name="reschedule_reminder">Herinnering opnieuw plannen</string>
     <string name="interval_start_condition">Interval startvoorwaarde</string>
-<string name="tag_filter_active">Tagfilter actief. Alleen gegevens met overeenkomende tags worden geëxporteerd.</string>
-<string name="show_taken_time_in_overview">Toon benodigde tijd in overzicht</string><string name="refill">Voorraad aanvullen</string></resources>
+    <string name="tag_filter_active">Tagfilter actief. Alleen gegevens met overeenkomende tags worden geëxporteerd.</string>
+    <string name="show_taken_time_in_overview">Toon benodigde tijd in overzicht</string>
+    <string name="refill">Voorraad aanvullen</string>
+    <string name="fourteen_days_before">veertien dagen ervoor</string>
+    <string name="seven_days_before">zeven dagen ervoor</string>
+    <string name="three_days_before">drie dagen ervoor</string>
+    <string name="one_day_before">één dag ervoor</string>
+    <string name="on_expiration">op vervaldatum</string>
+    <string name="expiration_settings">Instellingen voor vervaldatum</string>
+    <string name="production_date">Productiedatum</string>
+    <string name="expiration_date">Vervaldatum</string>
+    <string name="expiration_reminder">Herinnering voor vervaldatum</string>
+</resources>
