--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -264,5 +264,16 @@
     <string name="ignore_battery_optimization">Ignoruj optymalizację baterii</string>
     <string name="reschedule_reminder">Zmień termin przypomnienia</string>
     <string name="interval_start_condition">Warunek rozpoczęcia interwału</string>
-<string name="tag_filter_active">Filtr tagów aktywny. Eksportowane będą tylko dane z pasującymi tagami.</string>
-<string name="show_taken_time_in_overview">Pokaż czas trwania w przeglądzie</string><string name="refill">Uzupełnienie zapasów</string></resources>
+    <string name="tag_filter_active">Filtr tagów aktywny. Eksportowane będą tylko dane z pasującymi tagami.</string>
+    <string name="show_taken_time_in_overview">Pokaż czas trwania w przeglądzie</string>
+    <string name="refill">Uzupełnienie zapasów</string>
+    <string name="fourteen_days_before">czternaście dni wcześniej</string>
+    <string name="seven_days_before">siedem dni wcześniej</string>
+    <string name="three_days_before">trzy dni wcześniej</string>
+    <string name="one_day_before">jeden dzień wcześniej</string>
+    <string name="on_expiration">w momencie wygaśnięcia</string>
+    <string name="expiration_settings">Ustawienia wygaśnięcia</string>
+    <string name="production_date">Data produkcji</string>
+    <string name="expiration_date">Data wygaśnięcia</string>
+    <string name="expiration_reminder">Przypomnienie o wygaśnięciu</string>
+</resources>
