--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -254,5 +254,16 @@
     <string name="ignore_battery_optimization">Pil optimizasyonunu yoksay</string>
     <string name="reschedule_reminder">Hatırlatıcıyı yeniden planla</string>
     <string name="interval_start_condition">Aralık başlangıç koşulu</string>
-<string name="tag_filter_active">Etiket filtresi etkin. Yalnızca eşleşen etiketlere sahip veriler dışa aktarılacaktır.</string>
-<string name="show_taken_time_in_overview">Özet olarak geçen süreyi göster</string><string name="refill">Stok yenileme</string></resources>
+    <string name="tag_filter_active">Etiket filtresi etkin. Yalnızca eşleşen etiketlere sahip veriler dışa aktarılacaktır.</string>
+    <string name="show_taken_time_in_overview">Özet olarak geçen süreyi göster</string>
+    <string name="refill">Stok yenileme</string>
+    <string name="fourteen_days_before">on dört gün önce</string>
+    <string name="seven_days_before">yedi gün önce</string>
+    <string name="three_days_before">üç gün önce</string>
+    <string name="one_day_before">bir gün önce</string>
+    <string name="on_expiration">son kullanma tarihinde</string>
+    <string name="expiration_settings">Son kullanma ayarları</string>
+    <string name="production_date">Üretim tarihi</string>
+    <string name="expiration_date">Son kullanma tarihi</string>
+    <string name="expiration_reminder">Son kullanma hatırlatıcısı</string>
+</resources>
