--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -254,5 +254,16 @@
     <string name="ignore_battery_optimization">Ignorer batterioptimering</string>
     <string name="reschedule_reminder">Flyt påmindelse</string>
     <string name="interval_start_condition">Intervallets starttilstand</string>
-<string name="tag_filter_active">Tagfilter aktivt. Kun data med matchende tags eksporteres.</string>
-<string name="show_taken_time_in_overview">Vis den anvendte tid i oversigten</string><string name="refill">Lageropfyldning</string></resources>
+    <string name="tag_filter_active">Tagfilter aktivt. Kun data med matchende tags eksporteres.</string>
+    <string name="show_taken_time_in_overview">Vis den anvendte tid i oversigten</string>
+    <string name="refill">Lageropfyldning</string>
+    <string name="fourteen_days_before">fjorten dage før</string>
+    <string name="seven_days_before">syv dage før</string>
+    <string name="three_days_before">tre dage før</string>
+    <string name="one_day_before">en dag før</string>
+    <string name="on_expiration">ved udløb</string>
+    <string name="expiration_settings">Indstillinger for udløbsdato</string>
+    <string name="production_date">Produktionsdato</string>
+    <string name="expiration_date">Udløbsdato</string>
+    <string name="expiration_reminder">Påmindelse om udløbsdato</string>
+</resources>
