--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -254,5 +254,16 @@
     <string name="ignore_battery_optimization">Batterieoptimierung ignorieren</string>
     <string name="reschedule_reminder">Erinnerung verschieben</string>
     <string name="interval_start_condition">Intervallstartbedingung</string>
-<string name="tag_filter_active">Tag-Filter aktiv. Es werden nur Daten mit übereinstimmenden Tags exportiert.</string>
-<string name="show_taken_time_in_overview">Übersicht über die benötigte Zeit anzeigen</string><string name="refill">Lagerauffüllung</string></resources>
+    <string name="tag_filter_active">Tag-Filter aktiv. Es werden nur Daten mit übereinstimmenden Tags exportiert.</string>
+    <string name="show_taken_time_in_overview">Übersicht über die benötigte Zeit anzeigen</string>
+    <string name="refill">Lagerauffüllung</string>
+    <string name="fourteen_days_before">vierzehn Tage vorher</string>
+    <string name="seven_days_before">sieben Tage vorher</string>
+    <string name="three_days_before">drei Tage vorher</string>
+    <string name="one_day_before">einen Tag vorher</string>
+    <string name="on_expiration">bei Ablauf</string>
+    <string name="expiration_settings">Ablauf-Einstellungen</string>
+    <string name="production_date">Herstellungsdatum</string>
+    <string name="expiration_date">Ablaufdatum</string>
+    <string name="expiration_reminder">Ablauf-Erinnerung</string>
+</resources>
