--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -262,4 +262,13 @@
     <string name="tag_filter_active">Filtro de etiquetas activo. Solo se exportarán los datos con etiquetas coincidentes.</string>
     <string name="show_taken_time_in_overview">Mostrar tiempo empleado en resumen</string>
     <string name="refill">Reposición de existencias</string>
+    <string name="fourteen_days_before">catorce días antes</string>
+    <string name="seven_days_before">siete días antes</string>
+    <string name="three_days_before">tres días antes</string>
+    <string name="one_day_before">un día antes</string>
+    <string name="on_expiration">al vencimiento</string>
+    <string name="expiration_settings">Configuración de vencimiento</string>
+    <string name="production_date">Fecha de producción</string>
+    <string name="expiration_date">Fecha de vencimiento</string>
+    <string name="expiration_reminder">Recordatorio de vencimiento</string>
 </resources>
