--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -259,5 +259,16 @@
     <string name="ignore_battery_optimization">Ignorar a otimização da bateria</string>
     <string name="reschedule_reminder">Reagendar lembrete</string>
     <string name="interval_start_condition">Condição de início do intervalo</string>
-<string name="tag_filter_active">Filtro de etiquetas ativo. Apenas os dados com etiquetas correspondentes serão exportados.</string>
-<string name="show_taken_time_in_overview">Mostrar tempo decorrido na visão geral</string><string name="refill">Reabastecimento de estoque</string></resources>
+    <string name="tag_filter_active">Filtro de etiquetas ativo. Apenas os dados com etiquetas correspondentes serão exportados.</string>
+    <string name="show_taken_time_in_overview">Mostrar tempo decorrido na visão geral</string>
+    <string name="refill">Reabastecimento de estoque</string>
+    <string name="fourteen_days_before">quatorze dias antes</string>
+    <string name="seven_days_before">sete dias antes</string>
+    <string name="three_days_before">três dias antes</string>
+    <string name="one_day_before">um dia antes</string>
+    <string name="on_expiration">no vencimento</string>
+    <string name="expiration_settings">Configurações de vencimento</string>
+    <string name="production_date">Data de produção</string>
+    <string name="expiration_date">Data de vencimento</string>
+    <string name="expiration_reminder">Lembrete de vencimento</string>
+</resources>
