--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -271,4 +271,8 @@
     <string name="production_date">Production date</string>
     <string name="expiration_date">Expiration date</string>
     <string name="expiration_reminder">Expiration reminder</string>
+    <string name="daily_below_threshold">Daily when below threshold</string>
+    <string name="remind_days_before_expiration">Remind days before expiration</string>
+    <string name="out_of_stock_reminder_help">Reminds when the medicine is out of stock, either after every reminder or once or once per day.</string>
+    <string name="expiration_date_reminder_help">Reminds when the medicine\'s expiration date is reached or a configurable time before that date.</string>
 </resources>
