--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,4 +279,5 @@
     <string name="daily">Daily</string>
     <string name="medicine_stock_settings">Medicine stock settings</string>
     <string name="edit_medicine_stock_settings">Edit medicine stock settings</string>
+    <string name="clear_dates">Clear dates</string>
 </resources>
