Add refill action to out of stock reminder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -281,4 +281,5 @@
     <string name="edit_medicine_stock_settings">Edit medicine stock settings</string>
     <string name="clear_dates">Clear dates</string>
     <string name="acknowledged">Acknowledged</string>
+    <string name="refill_amount">Refill (%s)</string>
 </resources>
