--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -282,4 +282,5 @@
     <string name="clear_dates">Clear dates</string>
     <string name="acknowledged">Acknowledged</string>
     <string name="refill_amount">Refill (%s)</string>
+    <string name="expiration_date_notification">The medicine %1$s has an expiration date of %2$s.\nConsider replacing the medicine.</string>
 </resources>
